对文件进行解耦处理，把profile可用时间改成选择而非手动填入